--- a/CV ONline 2/vcc online/css/colors/pink.css
+++ b/CV ONline 2/vcc online/css/colors/pink.css
@@ -7,6 +7,7 @@
   border-bottom: 4px solid rgb(248, 132, 171);
 }
 .about .about-content .about-text h3 span,
+body .dark .aside .nav li a.active,
 .aside .nav li a:hover,
 .aside .nav li a.active {
   color: rgb(248, 132, 171);
