--- a/CV ONline 2/vcc online/css/style.css
+++ b/CV ONline 2/vcc online/css/style.css
@@ -528,15 +528,35 @@ select {
   -webkit-transform: scale(1.1);
 }
 
+/* Dark Body */
+
+body.dark .section {
+  background-color: #151515;
+}
+
+body.dark .aside {
+  background-color: #222222;
+}
+
+body.dark .aside .logo a,
+body.dark .aside .nav li a {
+  color: #ffffff;
+
+}
+
+body.dark .aside .nav li a {
+  border-color: #393939;
+}
+
 /*Responsive*/
 
 @media (max-width: 1199px){
-  .aside{
+  /* .aside{
     left: 270px;
   }
   .main-content{
     padding-left: 0;
-  }
+  } */
   .about .about-content .personal-info .info-item p span{
     display: block;
     margin-left: 0;
