--- a/CV ONline 2/css/style.css
+++ b/CV ONline 2/css/style.css
@@ -533,17 +533,44 @@ select {
 body.dark .section {
   background-color: #151515;
 }
-
+body.dark .about .about-content .timeline,
 body.dark .aside {
   background-color: #222222;
 }
-
+body.dark .fa .fa-calendar i,
+body.dark .about-content .padd-15 p,
+body.dark .about-text .padd-15 p,
+body.dark .contact .contact-info-item p,
+body.dark .contact .contact-info-item h4,
+body.dark  .timeline-item:last-child,
+body.dark .about-content .timeline .timeline-title,
+body.dark .about .about-content .title,
+body.dark.about-text .padd-15 p,
+body.dark .about-content .skills .skill-item h4,
+body.dark .about .about-content .personal-info .info-item p,
+body.dark .about .about-content .about-text h3,
+body.dark .section-title h2,
+body.dark .home .intro h1,
 body.dark .aside .logo a,
 body.dark .aside .nav li a {
   color: #ffffff;
 
 }
 
+body.dark .fa .fa-calendar i,
+body.dark  .timeline-item:last-child,
+body.dark .about .about-content .timeline .timeline-text,
+body.dark .about-content .timeline .timeline-date,
+body.dark .about-text .padd-15 p,
+body.dark .about-content .skills .skill-item ,
+body.dark .about .about-content .personal-info .info-item p span,
+body.dark .about .about-content .about-tex p,
+body.dark .home .intro p{
+   color: #e9e9e9;
+}
+
+body.dark .about .about-content .timeline,
+body.dark .about .about-content .personal-info .info-item p,
 body.dark .aside .nav li a {
   border-color: #393939;
 }
@@ -562,4 +589,13 @@ body.dark .aside .nav li a {
     margin-left: 0;
   }
 
+}
+
+@media (max-width: 575px) {
+  .contact .contact-info-item {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  
 }
