--- a/Wordpress/css/metro.css
+++ b/Wordpress/css/metro.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 480px;
     margin: 40px 0 30px 0;
+    direction: ltr;
+    overflow: hidden;
 }
 
 #metro-box .column{
@@ -32,7 +34,6 @@
 #metro-box .metro-item .box-img img{
     width: 338px;
     height: 220px;
-
 }
 
 #metro-box .metro-item.big .box-img{
@@ -60,10 +61,8 @@
 
 #metro-box .metro-item .box-img:hover .metro-content{
     bottom: 0;
-    height: 190px;
-
+    height: 200px;
 }
-
 
 #metro-box .metro-item .box-img .metro-content h3 {
     font: 13px;
@@ -77,12 +76,45 @@
     margin-top: 45px;
 }
 
-.color_2{
-    background: rgba(52, 152, 219, .7) !important;
-}
+
 .color_1{
     background:  rgba(136, 83, 150, 0.7) !important;;
 }
+.color_2{
+    background: rgba(52, 152, 219, .7) !important;
+}
+
 .color_3{
     background:  rgba(231, 76, 60, .7) !important;;
+}
+.color_4{
+    background:  rgba(17, 22, 51, 0.7) !important;;
+}
+
+
+/* Scrollebar*/
+#metro-box .mCSB_container {
+    height: 450px;
+    display: block;
+    overflow: hidden;
+}
+
+#metro-box .mCSB_scrollTools{
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    left: 0;
+    overflow: hidden;
+}
+
+#metro-box .mCSB_draggerRail{
+    width: 100%;
+    height: 20px;
+    background: #fdfdfd;
+}
+
+#metro-box .mCSB_dragger_bar{
+    width: 100%;
+    height: 20px;
+    background: #222;
 }
