--- a/Wordpress/css/style.css
+++ b/Wordpress/css/style.css
@@ -79,6 +79,7 @@ a{
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
+
 }
 
 .search input:focus{
@@ -120,4 +121,64 @@ a{
 
 .logo{
     float: left;
+}
+
+.welearn-container{
+    width: 110px;
+    margin: 20px auto;
+}
+
+.welearn-post{
+    width: 760px;
+    float: left;
+    margin-bottom: 50px;
+}
+
+.ourpost{
+    width: 440px;
+    height: 250px;
+    background: #fff;
+    border: 1px solid #e2e2e2;
+    border-bottom: 2px solid #e6e6e6;
+    float: right;
+}
+.ourpost h3{
+    background: #222;
+    color: #fdfdfd;
+    padding: 7px 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font: 13px;
+}
+
+.ourpost ul li{
+    padding: 11px;
+    border-bottom: 1px solid #e6e6e6;
+}
+.ourpost ul li::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.ourpost img{
+    width: 50px;
+    width: 50px;
+    float: left;
+    margin-right: 15px ;
+}
+
+.ourpost ul li a{
+    color: #555;
+    padding: 5px;
+}
+
+.ourpost ul li a:hover{
+    background: #E74C3C;
+    color: #fdfdfd;
+}
+
+.ourpost span{
+    float: right;
+    margin-top: 10px;
+    font-size: 11px;
 }
