--- a/Wordpress/css/style.css
+++ b/Wordpress/css/style.css
@@ -221,6 +221,7 @@ a{
     font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
     padding: 10px 15px;
+    line-height: 140%;
 }
 
 .post-content{
@@ -247,3 +248,129 @@ a{
 .post footer a:hover{
     color: #2ecc71;
 }
+
+.more-link{
+    width: auto !important;
+    float: left !important;
+    padding: 8px 15px !important;
+    background: #2ecc71;
+    border-radius: 15px;
+    margin: 5px 15px !important;
+    transition: all .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out; 
+}
+
+.more-link a{
+   
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: smaller;
+}
+
+.more-link:hover{
+    background-color:  #34495e;
+    transition: all .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out; 
+}
+
+.wp-pagenavi a, .wp-pagenavi span{
+    background: #2ecc71;
+  
+    padding: 5px;
+    float: right;
+    color: #fdfdfd;
+    margin: 2px;
+}
+
+.wp-pagenavi span.current{
+    background: #34495e;
+}
+
+.footer-nav{
+    width: 100%;
+    color: #34495e;
+    background-color: #34495e;
+    margin: 20px auto 0;
+    clear: both;
+    position: relative;
+}
+
+.main-footer{
+    width: 1100px;
+    margin: 0 auto;
+}
+
+.about{
+    float: left;
+    width: 300px;
+    height: 300px;
+
+}
+
+.about h5, .social h5, .support h5{
+  font-family: Arial, Helvetica, sans-serif;
+  font: 15px;
+  padding: 5px;
+  margin: 10px auto;
+  color: #fdfdfd;
+}
+
+.about p{
+    font-size: 13px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: justify;
+    line-height: 150%;
+    color: #fdfdfd;  
+}
+
+.social{
+    width: 300px;
+    height: 300px;
+    margin: 0 50px;
+    float: right;
+}
+.social ul li{
+    float: left;
+    margin: 10px 3px;
+}
+
+.support{
+    width: 300px;
+    height: 300px;
+    float: right;
+}
+.support ul li{
+    width: 40px;
+    height: 40px;
+    margin: 2px;
+    border-radius: 2px;
+    float: left;
+    background-color: #2c3e50;
+}
+
+.footer-bot{
+    width: 100%;
+    height: 50px;
+    background: #2c3e50;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    margin: 0 auto;
+    clear: both;
+}
+.footer-bot .copyright{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #fdfdfd;
+    margin: 18px 20px 0;
+    float: right;
+}
+
+.footer-bot .signature{
+    float: left;
+    color: #fdfdfd;
+    margin: 18px 0 0 20px;
+ 
+}
+
