--- a/Wordpress/css/style.css
+++ b/Wordpress/css/style.css
@@ -130,7 +130,7 @@ a{
 
 .suggest-post{
     width: 760px;
-    float: right;
+    float: left;
     margin-bottom: 50px;
 }
 
@@ -141,19 +141,19 @@ a{
     background: #fff;
     border: 1px solid #e2e2e2;
     border-bottom: 2px solid #e6e6e6;
-    float: right;
+    float: left;
     margin-bottom: 30px;
 }
 .ourpost h3{
     background: #222;
     color: #fdfdfd;
     padding: 7px 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    font: 13px;
+    font-family:;
+    font: 15px;
 }
 
 .ourpost ul li{
-    padding: 11px;
+    padding: 6px;
     border-bottom: 1px solid #e6e6e6;
 }
 .ourpost ul li::after{
@@ -165,12 +165,13 @@ a{
 .ourpost img{
     width: 50px;
     width: 50px;
-    float: left;
+    float: right;
     margin-right: 15px ;
 }
 
 .ourpost ul li a{
     color: #555;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
     padding: 5px;
 }
 
@@ -181,6 +182,8 @@ a{
 
 .ourpost span{
     float: right;
+    margin-right: 15px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
     margin-top: 10px;
     font-size: 11px;
 }
@@ -188,7 +191,7 @@ a{
 .ads-in img{
     width: 300px;
     height: 255px;
-    float: left;
+    float: right;
     margin-left: 0;
     margin-bottom: 30px;
 }
@@ -288,6 +291,18 @@ a{
 .wp-pagenavi span.current{
     background: #34495e;
 }
+
+
+/* Sliebar left */
+.left-sidebar{
+    width: 300px;
+    height: 400px;
+    float: right;
+}
+
+
+
+
 
 .footer-nav{
     width: 100%;
